--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.13"
+  },
+  "dependencies": {
+    "@splitbee/web": "^0.3.0"
   }
 }
