--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^3.0.13"
   },
   "dependencies": {
-    "@splitbee/web": "^0.3.0"
+    "@splitbee/web": "^0.3.0",
+    "eleventy-favicon": "^1.1.2"
   }
 }
