--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "homepage": "https://github.com/marcamos/jet#readme",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-cache-assets": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.13"
   },
   "dependencies": {
-    "@splitbee/web": "^0.3.0"
+    "@splitbee/web": "^0.3.0",
+    "speedlify-score": "^2.0.2"
   }
 }
